// Project Info
Project FM_Analytics_Silver_Layer {
  database_type: 'SQL Server'
  Note: 'Silver Layer (Normalized & History Tracking) based on proc-silver.sql'
}

// ==========================================
// Dimension Tables
// ==========================================

Table silver.dim_league {
  league_key int [pk, increment, note: "Surrogate Key (Implied identity)"]
  league varchar
}

Table silver.dim_club {
  club_key int [pk, increment, note: "Surrogate Key (Implied identity)"]
  club varchar
}

Table silver.dim_team_info {
  team_key varchar [pk, note: "Composite: LeagueKey.ClubKey"]
  league varchar
  club_name varchar
  dwh_create_date datetime [note: "SCD Type 2 Start Date"]
  dwh_cd_valid_till datetime [note: "SCD Type 2 End Date"]
  dwh_current_validity int [note: "1 = Active, 0 = Historical"]
}

Table silver.dim_playstyle {
  playstyle_key int [pk, increment, note: "Surrogate Key (Implied identity)"]
  tactical_style varchar
  playing_mentality varchar
  preferred_formation varchar
  pressing_style varchar
  marking_style varchar
}

Table silver.dim_manager_info {
  manager_key int [pk, increment]
  staff_id int [note: "Natural Key"]
  staff_name varchar
  current_club_key varchar
  previous_club_key varchar
  playstyle_key int
  contract_begins date
  contract_expires date
  dwh_create_date datetime
  dwh_cd_valid_till datetime
  dwh_current_validity int
}

Table silver.dim_player_info {
  player_key int [pk, increment, note: "Surrogate Key used in Facts"]
  player_id int [note: "Natural Key from Bronze"]
  player_name varchar
  team_key varchar
  contracted int
  age int
  position varchar
  dwh_create_date datetime
  dwh_cd_valid_till datetime
  dwh_current_validity int
}

// ==========================================
// Fact Tables
// ==========================================

Table silver.fact_teams_possession {
  team_key varchar
  average_possession float
  dwh_create_date datetime
  dwh_cd_valid_till datetime
  dwh_current_validity int
}

Table silver.fact_outfield_player_stats {
  player_key int
  team_key varchar
  minutes_played int
  team_goals_scored_per90 decimal
  team_goals_conceded_per90 decimal
  goals int
  goals_outside_the_box int
  shots_per90 decimal
  xGoals_per_shot decimal
  shot_accuracy decimal
  shots_on_target_per90 decimal
  shots_outside_the_box_per90 decimal
  goals_per90 decimal
  xGoals_per90 decimal
  non_penalty_xGoals_per90 decimal
  xGoals_overperformance decimal
  conversion_rate decimal
  assists int
  assists_per90 decimal
  passes_attempted_per90 decimal
  pass_accuracy decimal
  xAssits_per90 decimal
  open_play_key_passes_per90 decimal
  chances_created_per90 decimal
  dribbles_made_per90 decimal
  progressive_passes_per90 decimal
  open_play_crosses_attempted_per90 decimal
  open_play_cross_accuracy decimal
  crosses_attempted_per90 decimal
  cross_accuracy decimal
  tackles_attempted_per90 decimal
  tackle_accuracy decimal
  pressures_attempted_per90 decimal
  pressures_completed_per90 decimal
  possession_won_per90 decimal
  possession_lost_per90 decimal
  key_tackles_per90 decimal
  interceptions_per90 decimal
  clearances_per90 decimal
  blocks_per90 decimal
  shots_blocked_per90 decimal
  headers_attempted_per90 decimal
  heading_accuracy decimal
  key_headers_per90 decimal
  sprints_per90 decimal
  distance_covered_km_per90 decimal
  mistakes_leading_to_goals_per90 decimal
  fouls_made_per90 decimal
  fouls_against_per90 decimal
  yellow_cards_per90 decimal
  red_cards_per90 decimal
  dwh_create_date datetime
  dwh_cd_valid_till datetime
  dwh_current_validity int
}

Table silver.fact_gk_stats {
  player_key int
  team_key varchar
  minutes_played int
  team_goals_scored_per90 decimal
  team_goals_conceded_per90 decimal
  goals_conceded_per90 decimal
  saves_made_per90 decimal
  xGoals_prevented_per90 decimal
  xSave_rate decimal
  saves_tipped_per90 decimal
  saves_parried_per90 decimal
  saves_held_per90 decimal
  saves_percentage decimal
  passes_attempted_per90 decimal
  pass_accuracy decimal
  possession_won_per90 decimal
  possession_lost_per90 decimal
  interceptions_per90 decimal
  clearances_per90 decimal
  penalties_faced_per90 decimal
  penalties_save_percentage decimal
  distance_covered_km_per90 decimal
  mistakes_leading_to_goals_per90 decimal
  fouls_against_per90 decimal
  dwh_create_date datetime
  dwh_cd_valid_till datetime
  dwh_current_validity int
}

Table silver.fact_players_value {
  player_key int
  team_key varchar
  wage_per_week_k decimal
  transfer_value_m decimal
  dwh_create_date datetime
  dwh_cd_valid_till datetime
  dwh_current_validity int
}

// ==========================================
// Relationships
// ==========================================

// Team Building
// (Inferred from logic: team_key = league_key + club_key)
Ref: silver.dim_team_info.league > silver.dim_league.league
Ref: silver.dim_team_info.club_name > silver.dim_club.club

// Manager
Ref: silver.dim_manager_info.current_club_key > silver.dim_team_info.team_key
Ref: silver.dim_manager_info.previous_club_key > silver.dim_team_info.team_key
Ref: silver.dim_manager_info.playstyle_key > silver.dim_playstyle.playstyle_key

// Player
Ref: silver.dim_player_info.team_key > silver.dim_team_info.team_key

// Facts
Ref: silver.fact_teams_possession.team_key > silver.dim_team_info.team_key
Ref: silver.fact_outfield_player_stats.player_key > silver.dim_player_info.player_key
Ref: silver.fact_outfield_player_stats.team_key > silver.dim_team_info.team_key
Ref: silver.fact_gk_stats.player_key > silver.dim_player_info.player_key
Ref: silver.fact_gk_stats.team_key > silver.dim_team_info.team_key
Ref: silver.fact_players_value.player_key > silver.dim_player_info.player_key
Ref: silver.fact_players_value.team_key > silver.dim_team_info.team_key